@@ -77,6 +77,11 @@
             <artifactId>jersey-container-jdk-http</artifactId>
             <version>${jerseyVersion}</version>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.test-framework.providers</groupId>
+            <artifactId>jersey-test-framework-provider-jdk-http</artifactId>
+            <version>${jerseyVersion}</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -111,6 +116,13 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-Xmx3024m -XX:MaxPermSize=1024m -XX:PermSize=216m</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
